# cartolas

./: .gitignore  ANALISIS.md  CHANGELOG.md  CLAUDE.md  CRITICA.md  DOCUMENTACION.md  PLAN.md  README.md  actualiza_parquet.py  actualiza_parquet_year.py  analisis_cla.md  apv.csv  cla_mensual copy.py  cla_mensual.py  cla_mensual2.py  cli.py  estadisticas_por_fila_agresivo.csv  estadisticas_por_fila_conservador.csv  estadisticas_por_fila_moderado.csv  explicacion_detallada_cla_mensual.md  flujo_vivienda.csv  flujo_vivienda_2.csv  hello.py  main.py  pyproject.toml  resumen_apv.py  salida.txt  soyfocus.csv  soyfocus.py  tabla_pivotada_rentabilidades.csv  uf.csv
audits/: REPORTE_SEGURIDAD_INTEGRAL.md  RESUMEN_OBSERVACIONES.md  arquitectura_software.md  autenticacion_y_seguridad.md  autorizacion_y_autenticacion.md  complejidad_codigo.md  duplicacion_codigo.md  error_handling_audit.md  estructura_proyecto_seguridad.md  file_upload_audit.md  legibilidad_y_naming.md  logging_y_monitoreo.md  logica_negocio.md  manejo_errores.md  patrones_diseno.md  principios_solid.md  resiliencia.md  resiliencia_sistema.md  secretos_expuestos.md  seguridad_api.md  seguridad_base_datos.md  testing_audit.md  validacion_input.md
cartolas/: __init__.py  captcha.py  cartolas.py  config.py  download.py  download_cartola.py  download_cartolas.py  economy.py  elmer.py  fund_identifica.py  polars.py  polars_utils.py  read.py  save.py  soyfocus.py  transform.py  update.py  update_by_year.py  update_cartola.py
cla_mensual/: ~$cla_20250430.xlsx
comparador/: __init__.py  cla.py  cla_monthly.py  cla_monthly_custom.py  cla_monthly_new_conservador.py  cla_new.py  elmer.py  merge.py  new_cla.py  tablas.py  (+1 more)
(+25 files in other folders)
