[project]
name = "cartolas"
version = "0.3.0"
description = "Baja cartolas diarias"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "playwright>=1.49.0",
    "polars>=1.16.0",
    "captchapass @ git+ssh://git@github.com/ferrandonea/captchapass.git",
    "sendgrid>=6.11.0",
    "python-dotenv>=1.0.1",
    "bcchapi>=1.1.2",
    "pyarrow>=19.0.1",
    "xlsxwriter>=3.2.3",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "notebook>=7.4.7",
    "jupyterlab>=4.4.9",
    "ipykernel>=7.0.1",
    "numpy>=2.0.2",
    "matplotlib>=3.10.7",
]
