[project]
name = "cartolas"
version = "0.5.0"
description = "Baja cartolas diarias"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0",
    "polars>=1.16.0",
    "sendgrid>=6.11.0",
    "python-dotenv>=1.0.1",
    "bcchapi>=1.1.2",
    "pyarrow>=19.0.1",
    "xlsxwriter>=3.2.3",
    "pandas>=2.2.3",
    "onnxruntime>=1.24.3",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "notebook>=7.4.7",
    "jupyterlab>=4.4.9",
    "ipykernel>=7.0.1",
    "numpy>=2.0.2",
    "matplotlib>=3.10.7",
]

[dependency-groups]
dev = []
